functional except for Example 1b
